add global_nav and global_nav_item components:

--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -4,3 +4,5 @@
 @value skyblueColor: #47b3ea;
 @value blackColor: #222;
 @value geryColor: #999;
+@value whiteColor: #fff;
+@value whiteSmokeColor: #f4f4f4;
