--- a/src/components/global_nav/global_nav.module.css
+++ b/src/components/global_nav/global_nav.module.css
@@ -1,9 +1,11 @@
 @value blackColor,whiteColor,redColor from '../../common/colors.css';
 
 .gnb {
+  position: relative;
   display: flex;
   justify-content: space-between;
   width: 100%;
+  height: 80px;
   padding: 0 20px;
   transition: 0.2s ease-in;
 }
