--- a/src/components/global_nav_item/global_nav_item.module.css
+++ b/src/components/global_nav_item/global_nav_item.module.css
@@ -1,9 +1,9 @@
-@value whiteColor ,redColor from '../../common/colors.css';
+@value whiteColor, redColor, whiteSmokeColor from '../../common/colors.css';
 
 .item {
 }
 
-.item a {
+.item > a {
   display: flex;
   align-items: center;
   height: 100%;
@@ -14,13 +14,13 @@
   word-break: keep-all;
 }
 
-.item a > span {
+.title {
   position: relative;
   display: block;
   line-height: 1.8;
 }
 
-.item a > span::after {
+.title::after {
   content: "";
   position: absolute;
   left: 50%;
@@ -32,6 +32,45 @@
   transition: width 0.3s linear;
 }
 
-.item a:hover > span::after {
+.item > a:hover > .title::after {
   width: 100%;
+}
+
+.category {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: whiteColor;
+  overflow: hidden;
+  visibility: hidden;
+  transition: height 0.3s ease-in-out, visibility 0s linear 0.3s;
+}
+
+.selected .category {
+  visibility: visible;
+}
+
+.category.show {
+  height: 400px;
+  transition: height 0.3s ease-in-out;
+}
+
+.category::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 3px;
+  background-color: whiteSmokeColor;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 155px);
+  max-width: 1200px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 38px 10px;
 }
