--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,6 +1,11 @@
 .header {
   position: absolute;
   top: 0;
+  width: 100%;
+}
+
+.container {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
