add footer components

--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -8,3 +8,5 @@
 @value whiteSmokeColor: #f4f4f4;
 @value lightGreyColor: #e5e5e5;
 @value greyColor: #666;
+@vlaue orangeColor: #ff6216;
+@value greenColor: #539a00;
