--- a/src/components/global_nav/global_nav.module.css
+++ b/src/components/global_nav/global_nav.module.css
@@ -7,7 +7,12 @@
   width: 100%;
   height: 80px;
   padding: 0 20px;
+  background-color: transparent;
   transition: 0.2s ease-in;
+}
+
+.open-search.gnb {
+  background-color: whiteColor;
 }
 
 .gnb:hover {
