add swiper library & add swiper slide in news

--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -3,10 +3,10 @@
 @value orangeColor: #fe8109;
 @value skyblueColor: #47b3ea;
 @value blackColor: #222;
-@value geryColor: #999;
+@value greyColor: #999;
 @value whiteColor: #fff;
 @value whiteSmokeColor: #f4f4f4;
 @value lightGreyColor: #e5e5e5;
-@value greyColor: #666;
+/* @value greyColor: #666; */
 @vlaue orangeColor: #ff6216;
 @value greenColor: #539a00;
