--- a/src/components/slider_item/slider_item.module.css
+++ b/src/components/slider_item/slider_item.module.css
@@ -10,23 +10,23 @@
 }
 
 .background-0 {
-  background: center / cover no-repeat url("../../assets/img/main/home_1.png");
+  background: center / cover no-repeat url("../../assets/img/main/home/home_1.png");
 }
 
 .background-1 {
-  background: center / cover no-repeat url("../../assets/img/main/home_2.png");
+  background: center / cover no-repeat url("../../assets/img/main/home/home_2.png");
 }
 
 .background-2 {
-  background: center / cover no-repeat url("../../assets/img/main/home_3.png");
+  background: center / cover no-repeat url("../../assets/img/main/home/home_3.png");
 }
 
 .background-3 {
-  background: center / cover no-repeat url("../../assets/img/main/home_4.png");
+  background: center / cover no-repeat url("../../assets/img/main/home/home_4.png");
 }
 
 .background-4 {
-  background: center / cover no-repeat url("../../assets/img/main/home_5.jpg");
+  background: center / cover no-repeat url("../../assets/img/main/home/home_5.jpg");
 }
 
 .content {
