add etc componenets

--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -10,3 +10,6 @@
 /* @value greyColor: #666; */
 @vlaue orangeColor: #ff6216;
 @value greenColor: #539a00;
+@value davyGreyColor: #555;
+@value charcolColor: #494949;
+@value darkSilverColor: #6f6f6f;
