--- a/src/components/management/management.module.css
+++ b/src/components/management/management.module.css
@@ -13,11 +13,13 @@
 
 .management-list {
   display: flex;
+  justify-content: space-around;
+  max-width: 1200px;
+  margin: 0 auto;
   padding-top: 280px;
 }
 
 .management-list-item {
-  flex-basis: 33%;
   padding: 0 22px;
   color: whiteColor;
   text-align: center;
@@ -68,6 +70,6 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 1px;
+  height: 2px;
   background-color: redColor;
 }
