--- a/src/components/global_nav_item/global_nav_item.module.css
+++ b/src/components/global_nav_item/global_nav_item.module.css
@@ -1,7 +1,5 @@
-@value whiteColor, redColor, whiteSmokeColor from '../../common/colors.css';
-
-.item {
-}
+@value whiteColor,blackColor, redColor, whiteSmokeColor, lightGreyColor from '../../common/colors.css';
+@value tabletSize from '../../common/size.css';
 
 .item > a {
   display: flex;
@@ -74,4 +72,62 @@
   height: 100%;
   margin: 0 auto;
   padding: 38px 10px;
+}
+
+@media screen and (max-width: tabletSize) {
+  .item {
+    position: relative;
+  }
+  .item:not(:first-child) {
+    margin-top: 16px;
+    padding-top: 27px;
+  }
+
+  .item:not(:first-child)::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 0.5px;
+    background-color: lightGreyColor;
+  }
+
+  .item > a {
+    height: max-content;
+    padding: 0;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.3;
+    color: blackColor;
+  }
+  .title::after {
+    display: none;
+  }
+
+  .category {
+    position: relative;
+    width: 100%;
+    height: auto;
+    background-color: whiteColor;
+    box-shadow: none;
+    visibility: visible;
+  }
+
+  .category::before {
+    display: none;
+  }
+
+  .category.show {
+    height: auto;
+    transition: none;
+  }
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: none;
+    margin: 0 auto;
+    margin-top: 14px;
+    padding: 0;
+  }
 }
