--- a/src/components/site_map/site_map.module.css
+++ b/src/components/site_map/site_map.module.css
@@ -1,4 +1,5 @@
 @value whiteColor,blackColor, greyColor, lightGreenColor, redColor, orangeColor, skyblueColor from '../../common/colors.css';
+@value tabletSize from '../../common/size.css';
 
 .site-map {
   position: fixed;
@@ -332,4 +333,10 @@
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.5;
+}
+
+@media screen and (max-width: tabletSize) {
+  .site-map {
+    display: none;
+  }
 }
