--- a/src/components/util_nav_item/util_nav_item.module.css
+++ b/src/components/util_nav_item/util_nav_item.module.css
@@ -3,7 +3,7 @@
 .item {
   flex-basis: 25%;
   padding: 0 10px;
-  font-size: 0.85rem;
+  font-size: 13px;
   font-weight: 600;
   color: greyColor;
   line-height: 1.6;
