--- a/src/components/global_nav/global_nav.module.css
+++ b/src/components/global_nav/global_nav.module.css
@@ -64,7 +64,7 @@
   top: 5px;
   right: 20px;
   display: none;
-  font-size: 1.5rem;
+  font-size: 24px;
   color: whiteColor;
   cursor: pointer;
 }
@@ -152,7 +152,7 @@
   top: 7px;
   right: 20px;
   display: none;
-  font-size: 1.5rem;
+  font-size: 24px;
   color: greyColor;
   cursor: pointer;
 }
@@ -202,7 +202,9 @@
 
   .center-container,
   .right-container {
+    visibility: hidden;
     transform: translateX(100vw);
+    transition: transform 400ms ease-in-out, visibility 0s 400ms;
   }
 
   .img-default {
@@ -212,15 +214,11 @@
     display: block;
   }
 
-  .center-container,
-  .right-container {
-    transition: transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out;
-  }
-
   .total-menu-open .center-container,
   .total-menu-open .right-container {
+    visibility: visible;
     transform: translate(0);
-    transition: transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out;
+    transition: transform 400ms ease-in-out;
   }
 
   .center-container {
