--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -1,8 +1,9 @@
 @value whiteColor from '../../common/colors.css';
+@value tabletSize from '../../common/size.css';
 
 .home {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .container {
@@ -35,5 +36,6 @@
 
 .slider-btn {
   color: whiteColor;
+  font-size: 16px;
   cursor: pointer;
 }
