--- a/src/components/intro/intro.module.css
+++ b/src/components/intro/intro.module.css
@@ -1,4 +1,5 @@
-@value greyColor, redColor from '../../common/colors.css';
+@value greyColor, redColor, charcolColor from '../../common/colors.css';
+@value tabletSize, mobileSize from '../../common/size.css';
 
 .intro {
   position: relative;
@@ -26,6 +27,7 @@
 }
 
 .content .item-img .hidden-mobile {
+  display: block;
 }
 
 .intro-list {
@@ -64,7 +66,71 @@
 
 .intro-item dd {
   margin-top: 18px;
-  color: greyColor;
+  color: charcolColor;
   line-height: 1.6;
   word-break: keep-all;
+}
+
+@media screen and (max-width: tabletSize) {
+  .content {
+    margin: 0 auto;
+    margin-top: -18px;
+    max-width: 720px;
+    padding: 0 15px;
+  }
+
+  .item-img {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .content .item-img .hidden-desktop {
+    display: block;
+  }
+
+  .content .item-img .hidden-mobile {
+    display: none;
+  }
+
+  .intro-item dt {
+    font-size: 17px;
+  }
+
+  .intro-item dd {
+    font-size: 15px;
+    line-height: 1.6;
+  }
+}
+
+@media screen and (max-width: mobileSize) {
+  .intro {
+    padding-top: 70px;
+  }
+
+  .content {
+    max-width: 540px;
+  }
+
+  .intro-list {
+    flex-direction: column;
+  }
+
+  .intro-item {
+    padding: 17px 0 0;
+  }
+
+  .intro-item::before {
+    left: 50%;
+    width: 175px;
+    transform: translateX(-50%);
+  }
+
+  .intro-item:not(:first-child) {
+    margin-top: 35px;
+  }
+
+  .intro-item dd {
+    margin-top: 6px;
+    padding: 0 5vw;
+  }
 }
