--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -1,3 +1,5 @@
+@value tabletSize from '../../common/size.css';
+
 .main {
   min-height: 100vh;
 }
@@ -10,4 +12,10 @@ article > h2 {
   text-align: center;
   text-transform: uppercase;
   z-index: 8;
+}
+
+@media screen and (max-width: tabletSize) {
+  article > h2 {
+    font-size: 5.5vw;
+  }
 }
