--- a/src/components/news/news.module.css
+++ b/src/components/news/news.module.css
@@ -1,5 +1,5 @@
-@value whiteColor, lightGreenColor, greyColor, redColor from '../../common/colors.css';
-
+@value whiteColor,charcolColor, lightGreenColor, greyColor, redColor from '../../common/colors.css';
+@value tabletSize from '../../common/size.css';
 .news {
   position: relative;
   padding-top: 105px;
@@ -26,6 +26,7 @@
 
 .news .swiper-slide {
   width: 458px;
+  margin-right: 60px;
 }
 
 .news .swiper-slide:nth-child(2n) > .news-item {
@@ -58,7 +59,7 @@
 .news-date {
   display: block;
   margin-top: 11px;
-  font-size: 0.875rem;
+  font-size: 14px;
   line-height: 1.4;
   color: greyColor;
 }
@@ -68,7 +69,7 @@
   bottom: 34px;
   right: 30px;
   padding-right: 50px;
-  font-size: 0.875rem;
+  font-size: 14px;
   line-height: 1.4;
   color: greyColor;
   opacity: 0;
@@ -105,4 +106,54 @@
   height: 5px;
   border-radius: 100%;
   transform: translateY(-50%);
+}
+
+@media screen and (max-width: tabletSize) {
+  .news {
+    padding-top: 70px;
+  }
+
+  .news .swiper-container {
+    margin-top: 28px;
+    padding-bottom: 20px;
+  }
+
+  .news .swiper-slide:nth-child(2n) > .news-item {
+    margin-top: 0px;
+  }
+
+  .news-item {
+    margin-top: 0;
+  }
+
+  .news .swiper-slide {
+    width: 250px;
+    margin-right: 22px;
+  }
+
+  .news-item img {
+    height: 165px;
+  }
+
+  .news-item figcaption {
+    padding: 12px 13px 14px;
+  }
+
+  .news-title {
+    height: 44px;
+  }
+
+  .news-date {
+    font-size: 12px;
+    line-height: 1.4;
+  }
+
+  .more {
+    bottom: 17px;
+    right: 0;
+    font-size: 14px;
+    line-height: 1.4;
+    color: charcolColor;
+    opacity: 1;
+  }
 }
