--- a/src/components/search_box/search_box.module.css
+++ b/src/components/search_box/search_box.module.css
@@ -35,7 +35,7 @@
   align-items: center;
   width: 60px;
   height: 100%;
-  font-size: 1.6rem;
+  font-size: 1.625rem;
 }
 
 .search-prepend {
@@ -55,7 +55,7 @@
   border: none;
   outline: none;
   font-family: "Jua", sans-serif;
-  font-size: 1.3rem;
+  font-size: 21px;
   font-weight: 600;
   line-height: 1.6;
 }
@@ -104,7 +104,7 @@
 .title {
   padding-left: 42px;
   color: greyColor;
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: 600;
   line-height: 2;
 }
@@ -112,6 +112,7 @@
 .list a {
   display: block;
   padding: 7px 0 7px 42px;
+  font-size: 16px;
   font-weight: 600;
   line-height: 1.375;
 }
@@ -130,6 +131,26 @@
     height: 100vh;
     background-color: whiteColor;
     z-index: 199;
+  }
+
+  .search-area {
+    height: 46px;
+  }
+
+  .search-area::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0.5px;
+    background-color: lightGreyColor;
+  }
+
+  .input {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.2;
   }
 
   .auto-compile {
