--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap");
+@value tabletSize from './common/size.css';
 
 body {
   margin: 0;
@@ -9,4 +10,10 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+@media screen and (max-width: tabletSize) {
+  html {
+    font-size: 10px;
+  }
 }
