--- a/src/components/brand/brand.module.css
+++ b/src/components/brand/brand.module.css
@@ -1,12 +1,12 @@
 @value whiteColor, redColor, whiteSmokeColor, greyColor from '../../common/colors.css';
+@value tabletSize, mobileSize from "../../common/size.css";
 
 .brand {
   padding-top: 150px;
 }
 
 .brand .content {
-  padding-top: 40px;
-  padding-bottom: 86px;
+  padding: 40px 0 86px;
 }
 
 .brand .visual {
@@ -37,7 +37,8 @@
   justify-content: space-between;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 31px 86px;
+  margin-bottom: 86px;
+  padding: 0 31px;
 }
 
 .brand-list-item {
@@ -57,7 +58,7 @@
 }
 
 .brands .category {
-  font-size: 1.125rem;
+  font-size: 18px;
   font-weight: 600;
   line-height: 1.3;
   text-transform: uppercase;
@@ -94,4 +95,89 @@
   line-height: 1.6;
   color: greyColor;
   text-align: center;
+}
+
+@media screen and (max-width: tabletSize) {
+  .brand {
+    padding-top: 70px;
+  }
+
+  .brand .content {
+    margin-top: -23px;
+    padding: 0;
+  }
+
+  .brand .visual {
+    height: 360px;
+  }
+
+  .brand .visual-text {
+    padding-left: 50px;
+  }
+
+  .brands {
+    padding-top: 50px;
+    padding-bottom: 55px;
+  }
+
+  .brand-list {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 720px;
+    margin: 0 auto;
+    padding: 0 25px;
+    margin-bottom: 45px;
+  }
+
+  .brand-list-item {
+    flex-basis: 50%;
+  }
+
+  .brand-list-item::before {
+    left: 50%;
+    width: 50%;
+    transform: translateX(-50%);
+  }
+
+  .brand-list-item:nth-child(n + 3) {
+    margin-top: 30px;
+  }
+
+  .brands figure {
+    margin-top: 20px;
+  }
+
+  .brands figure img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .brands figure::before {
+    width: 150px;
+    height: 150px;
+  }
+
+  .brands figcaption {
+    margin-top: 18px;
+  }
+}
+
+@media screen and (max-width: mobileSize) {
+  .brand-list {
+    max-width: 540px;
+  }
+
+  .brands figure img {
+    width: 125px;
+    height: 125px;
+  }
+
+  .brands figure::before {
+    width: 125px;
+    height: 125px;
+  }
+
+  .brands .category {
+    font-size: 14px;
+  }
 }
