add mediaQuery to map, etc, footer section

--- a/src/components/article_button/article_button.module.css
+++ b/src/components/article_button/article_button.module.css
@@ -25,9 +25,9 @@
 
 @media screen and (max-width: tabletSize) {
   .button a {
-    width: 150px;
+    max-width: 150px;
     height: 37px;
-    padding: 8px 32px 7px;
+    padding: 8px 26px 7px;
     border-radius: 18.5px;
     font-size: 15px;
     line-height: 1.2;
