--- a/src/components/brand/brand.module.css
+++ b/src/components/brand/brand.module.css
@@ -163,6 +163,10 @@
 }
 
 @media screen and (max-width: mobileSize) {
+  .brand .content {
+    margin-top: -12px;
+  }
+
   .brand-list {
     max-width: 540px;
   }
