--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,4 +1,5 @@
 @value whiteColor, lightGreyColor, greyColor, blackColor, greenColor, orangeColor from '../../common/colors.css';
+@value mobileSize from '../../common/size.css';
 
 .footer {
   position: relative;
@@ -172,6 +173,11 @@
   justify-content: space-between;
 }
 
+.social img {
+  width: 100%;
+  height: 100%;
+}
+
 .webmark {
   display: flex;
   justify-content: flex-end;
@@ -209,4 +215,108 @@
   opacity: 1;
   visibility: visible;
   transition: opacity 200ms ease-in-out;
+}
+
+@media screen and (max-width: mobileSize) {
+  .footer {
+    height: auto;
+  }
+
+  .container {
+    flex-direction: column;
+    height: 100%;
+    padding: 20px 40px;
+  }
+
+  .family-site {
+    position: static;
+  }
+
+  .family-link {
+    width: 100%;
+  }
+
+  .content-left {
+    margin-top: 20px;
+  }
+
+  .links {
+    max-width: 400px;
+  }
+
+  .links > ul {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 15px;
+  }
+
+  .links > ul > li {
+    position: relative;
+    flex-basis: 28%;
+    min-width: max-content;
+    padding: 5px 0;
+    padding-right: 30px;
+    font-size: 12px;
+    line-height: 1.2;
+  }
+
+  .links > ul > li:nth-child(n + 6) {
+    margin-top: 0;
+  }
+
+  .links > ul > li:not(:nth-child(1)):not(:nth-child(6))::before {
+    display: none;
+  }
+
+  .info {
+    max-width: 400px;
+    margin-top: 20px;
+  }
+
+  .info > ul > li {
+    position: relative;
+    font-size: 12px;
+  }
+
+  .info > ul > li:first-child {
+    font-weight: 600;
+  }
+
+  .info > ul > li:not(:nth-child(1)):not(:nth-child(5))::before {
+    display: none;
+  }
+
+  .copyright {
+    position: absolute;
+    bottom: 30px;
+    font-size: 12px;
+  }
+
+  .content-right {
+    flex-basis: 30%;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    padding: 0;
+  }
+
+  .social {
+    flex-direction: row;
+    max-width: 400px;
+    margin: 0;
+    padding: 0 15px;
+  }
+
+  .social > ul > li {
+    width: 34px;
+    height: 34px;
+    margin-right: 15px;
+  }
+
+  .webmark {
+    margin-top: 0;
+  }
+
+  .webmark > a {
+    height: 34px;
+  }
 }
