--- a/src/components/map/map.module.css
+++ b/src/components/map/map.module.css
@@ -1,4 +1,5 @@
 @value redColor, greyColor, lightGreyColor, greyColor from '../../common/colors.css';
+@value tabletSize, mobileSize from '../../common/size.css';
 
 .map {
   padding-top: 70px;
@@ -31,7 +32,6 @@
 
 .map-scroll {
   position: absolute;
-  top: 0;
   top: 59px;
   left: -2px;
   width: 5px;
@@ -42,10 +42,20 @@
 }
 
 .map-scroll_m {
+  position: absolute;
+  top: -2px;
+  left: 56px;
   display: none;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: redColor;
+  transition: transform 200ms ease-in-out;
 }
 
 .map-category {
+  display: flex;
+  flex-direction: column;
   margin-left: 36px;
 }
 
@@ -74,20 +84,10 @@
 }
 
 .map-content {
-  position: relative;
   display: flex;
   width: 100%;
   height: 100%;
   z-index: 5;
-}
-
-.map-content::after {
-  content: "";
-  position: absolute;
-  width: 734px;
-  height: 408px;
-  background: center / cover no-repeat url("../../assets/img/main/map/map.png");
-  z-index: -1;
 }
 
 .map-pin {
@@ -111,6 +111,17 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+.pin-wrap::after {
+  content: "";
+  position: absolute;
+  left: 3%;
+  top: -17%;
+  width: 100%;
+  height: 408px;
+  background: center / contain no-repeat url("../../assets/img/main/map/map.png");
+  z-index: -1;
 }
 
 .pin {
@@ -160,48 +171,42 @@
 .china .pin-content {
   top: 27%;
   left: 10%;
-  width: 480px;
 }
 
 .us .pin-content {
   top: 23%;
   left: 20%;
-  width: 480px;
 }
 
 .japan .pin-content {
   top: 40%;
   left: 20%;
-  width: 480px;
 }
 
 .australia .pin-content {
   top: 14%;
   left: 15%;
-  width: 480px;
 }
 
 .vietnam .pin-content {
   top: 58%;
   left: 11%;
-  width: 450px;
 }
 
 .canada .pin-content {
   top: 17%;
   left: 10%;
-  width: 550px;
 }
 
 .pin-content dt {
-  font-size: 1.875rem;
+  font-size: 2.1vw;
   font-weight: 600;
   line-height: 1.2;
 }
 
 .pin-content dd {
   margin-top: 17px;
-  font-size: 1.3rem;
+  font-size: 1.4vw;
   color: greyColor;
   line-height: 1.6;
 }
@@ -216,7 +221,7 @@
 
 .issue figcaption {
   padding-top: 26px;
-  font-size: 1.125rem;
+  font-size: 18px;
   line-height: 1.3;
 }
 
@@ -228,4 +233,216 @@
   font-size: 2rem;
   font-weight: 600;
   line-height: 1.2;
+}
+
+@media screen and (max-width: tabletSize) {
+  .map {
+    padding-top: 60px;
+    padding-bottom: 75px;
+  }
+
+  .map .content {
+    display: flex;
+    flex-direction: column;
+    max-width: 720px;
+    height: auto;
+    margin: 26px auto 40px;
+    padding: 0 1rem;
+  }
+
+  .map-tab {
+    position: relative;
+    height: auto;
+  }
+
+  .map-tab::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: lightGreyColor;
+  }
+
+  .map-scroll_m {
+    display: block;
+  }
+  .map-scroll {
+    display: none;
+  }
+
+  .map-content {
+    margin-top: 20px;
+  }
+
+  .map-category {
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    margin-left: 0px;
+    padding: 0 20px;
+  }
+
+  .map-category > li {
+    font-size: 18px;
+  }
+
+  .map-category li:not(:first-child) {
+    margin-top: 0px;
+  }
+
+  .active.pin-item {
+    flex-direction: column;
+  }
+
+  .pin-wrap::after {
+    position: static;
+    left: 0;
+    top: 0;
+    height: 300px;
+  }
+  .pin-content {
+    position: static;
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 13px;
+    text-align: center;
+    word-break: keep-all;
+    order: 2;
+  }
+
+  .pin-content dt {
+    font-size: 30px;
+  }
+
+  .pin-content dd {
+    margin-top: 17px;
+    font-size: 16px;
+  }
+
+  .china .pin {
+    top: 23%;
+    left: 38%;
+  }
+
+  .us .pin {
+    top: 25%;
+    left: 72%;
+  }
+
+  .japan .pin {
+    top: 23%;
+    left: 46%;
+  }
+
+  .australia .pin {
+    top: 48%;
+    left: 44%;
+  }
+
+  .vietnam .pin {
+    top: 32%;
+    left: 38%;
+  }
+
+  .canada .pin {
+    top: 12%;
+    left: 67%;
+  }
+  .issue {
+    display: flex;
+    max-width: 80%;
+    margin: 20px auto 0;
+  }
+
+  .issue img {
+    width: 200px;
+  }
+
+  .issue figcaption {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 15px;
+  }
+}
+
+@media screen and (max-width: mobileSize) {
+  .map .content {
+    max-width: 450px;
+  }
+
+  .map-category {
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
+    margin-left: 0px;
+    padding: 0;
+  }
+
+  .map-category > li {
+    font-size: 1vw;
+  }
+
+  .map-category > li > span {
+    padding: 5px;
+  }
+
+  .map-scroll_m {
+    left: 22px;
+  }
+
+  .pin-content {
+    width: 85%;
+  }
+
+  .china .pin {
+    top: 24%;
+    left: 33%;
+  }
+
+  .us .pin {
+    top: 22%;
+    left: 78%;
+  }
+
+  .japan .pin {
+    top: 20%;
+    left: 44%;
+  }
+
+  .australia .pin {
+    top: 39%;
+    left: 42%;
+  }
+
+  .vietnam .pin {
+    top: 26%;
+    left: 33%;
+  }
+
+  .canada .pin {
+    top: 11%;
+    left: 70%;
+  }
+
+  .issue {
+    max-width: 90%;
+  }
+
+  .issue img {
+    width: 150px;
+  }
+
+  .issue figcaption {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 14px;
+    padding: 10px;
+  }
+  .issue figcaption strong {
+    font-size: 16px;
+  }
 }
