--- a/src/components/family_modal/family_modal.module.css
+++ b/src/components/family_modal/family_modal.module.css
@@ -1,4 +1,4 @@
-@value whiteColor, lightGreyColor, greyColor, blackColor, greenColor, orangeColor from '../../common/colors.css';
+@value whiteColor, lightGreyColor, charcolColor, blackColor, greenColor, orangeColor from '../../common/colors.css';
 @value mobileSize from '../../common/size.css';
 
 .family-modal {
@@ -142,7 +142,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 1.7;
-  color: greyColor;
+  color: charcolColor;
   transition: 0.2s linear;
 }
 
@@ -167,6 +167,49 @@
 @media screen and (max-width: mobileSize) {
   .family-modal {
     bottom: 50%;
-    right: unset;
+    right: 0;
+  }
+
+  .active .family-modal-box {
+    width: 90%;
+    height: 370px;
+    margin: 0 auto;
+    visibility: visible;
+    opacity: 1;
+    transition: 0.3s ease-in-out;
+  }
+
+  .closeBtn {
+    right: 0;
+  }
+
+  .family-modal-box .content {
+    padding: 25px;
+  }
+
+  .family-modal-box .content > dl {
+    flex-direction: column;
+  }
+
+  .family-modal-box .content > dl:first-child {
+    padding-bottom: 12px;
+  }
+
+  .family-modal-box .content > dl:last-child {
+    padding-top: 12px;
+  }
+
+  .family-modal-box .content > dl > dd {
+    margin-top: 17px;
+  }
+
+  .family-modal-box .content > dl > dd > ul > li {
+    flex-basis: 33%;
+    padding-bottom: 10px;
+  }
+
+  .family-modal-box .content > dl > dd > ul > li > a {
+    font-size: 12px;
+    line-height: 1.5;
   }
 }
